--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ Bindle Binaries Tools
    - Adding initial libbindle.la (syzdek)
    - Adding perl module Bindle::CGI (syzdek)
    - Adding support for numeric Git package versions. (syzdek)
+   - Adding convenience macro for specifing Libtool version info in in the
+     configure.ac. (syzdek)
 
 #### 0.3
    - Adding shared automake include files. (syzdek)
