--- a/README
+++ b/README
@@ -77,7 +77,7 @@ Source Code
    Preparing Source:
 
       $ cd bindletools
-      $ ./build-aux/autogen.sh
+      $ ./autogen.sh
 
    Git Branches:
       master - Current release of packages.
