--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Bindle Binaries Tools
 =====================
 
 #### devel
+   - Adding pre/post hooks to autogen.sh (syzdek)
    - Adding initial libbindle.la (syzdek)
    - Adding perl module Bindle::CGI (syzdek)
    - Adding support for numeric Git package versions. (syzdek)
