--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 Bindle Binaries Tools
 =====================
 
+#### devel
+
 #### 0.4
    - Adding pre/post hooks to autogen.sh (syzdek)
    - Adding initial libbindle.la (syzdek)
