--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ Bindle Binaries Tools
 
 #### devel
    - Removing call to contrib/bindletools/autogen.sh (syzdek)
+   - Adding autoconf checks for Doxygen. (syzdek)
+   - Updating Autoconf checks for GCC warnings. (syzdek)
+   - Adding PKGCONFDIR keyword to substitution macros and targets. (syzdek)
 
 #### 0.4
    - Adding pre/post hooks to autogen.sh (syzdek)
