project: starting development of v0.6

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 Bindle Binaries Tools
 =====================
 
+#### devel
+
 #### 0.5
    - Removing call to contrib/bindletools/autogen.sh (syzdek)
    - Adding autoconf checks for Doxygen. (syzdek)
