--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Bindle Binaries Tools
 =====================
 
 #### devel
+   - Changing default behavior to disable 'debug' option (syzdek)
 
 #### 0.5
    - Removing call to contrib/bindletools/autogen.sh (syzdek)
