--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Bindle Binaries Tools
 
 #### devel
    - Changing default behavior to disable 'debug' option (syzdek)
+   - Allowing additional warnings to be disabled (syzdek)
 
 #### 0.5
    - Removing call to contrib/bindletools/autogen.sh (syzdek)
